--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ a {
     background-color: rgb(255, 174, 0);
     border-radius: 50%;
     top: 13px;
-    left: 88px;
+    left: 105%;
 }
 .container header nav .links {
     display: flex;
