--- a/css/main.css
+++ b/css/main.css
@@ -484,7 +484,7 @@ a {
     width: 300px;
     height: 100%;
 }
-.container .best-rooms .rooms div {
+.container .best-rooms .rooms div:not(.sold-off) {
     position: relative;
     width: 100%;
     height: 100%;
@@ -502,7 +502,7 @@ a {
 }
 .container .best-rooms .sold-off{
     width: 300px;
-    height: 260.33px;
+    height: 272.33px;
     background-color: var(--orange);
     border-radius: 6px;
     display: flex;
@@ -568,6 +568,11 @@ a {
     color: var(--orange);
     box-shadow: 1px 2px 17px 6px;
     border-radius: 12px;
+}
+@media (max-width: 768px) {
+    .container .newsletter {
+        box-shadow: 1px 2px 17px 2px;
+    }
 }
 .container .newsletter h3{
     color: white;
