--- a/css/main.css
+++ b/css/main.css
@@ -622,6 +622,11 @@ a {
         width: 100%;
     }
 }
+@media (min-width: 769px) and (max-width: 1000px) {
+    .container .newsletter .inputs input[type="email"] {
+        width: 300px;
+    }
+}
 /* End Newsletter */
 /* Start Footer */
 .footer .container {
